# kafka-workshop

./: Dockerfile  README.md  docker-compose.verify.yml  docker-compose.yml  pyproject.toml  requirements.txt
code/: clicks_app.py  clicks_app_with_dlq_prototype.py  duplicates_handling.py  faust_app.py  faust_app_after_1st.py  faust_app_after_2nd.py  produce_orders_lines.py  prosumer_for_testing.py  schema_aware_consumer.py  schema_aware_producer.py  send_duplicates_1.py  send_duplicates_2.py  simple_web_app_consumer.py  tracing.py  transactional_producer.py  transactional_prosumer.py
code/tests/: test_prosumer.py
diagrams/: consumer_driven_contract_testing.puml  outbox_pattern_after.puml  outbox_pattern_before.puml  outbox_pattern_before2.puml  publish_from_db.puml  publish_then_apply_changes.puml  schema_aware_consumer.puml  schema_aware_consumer_seq.puml  schema_aware_producer.puml  schema_aware_producer_seq.puml  transactional_producer.puml  transactional_prosumer.puml
solutions/: outbox_processor.py  transactional_prosumer.py
verification/: hello_world.py
web_app/: app.py
web_app/web_app/: app.py  database.py  outbox_processor.py  tracing.py
