[tool.poetry]
name = "kafka-training"
version = "0.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.110.1"}
confluent-kafka = "^2.3.0"
faust-streaming = {extras = ["fast", "prometheus", "rocksdb", "uvloop"], version = "^0.11.0"}
jsonschema = "^4.21.1"
sqlalchemy = "^2.0.29"
psycopg2-binary = "^2.9.9"
watchfiles = "^0.21.0"
requests = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
mypy = "^1.9.0"
ruff = "^0.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
